--- a/client/app/auth/setupPayment.component.css
+++ b/client/app/auth/setupPayment.component.css
@@ -6,6 +6,7 @@ body {
 }
 .stepwizard-row {
     display: table-row;
+    margin-bottom: 20px;
 }
 .stepwizard {
     display: table;
@@ -39,4 +40,14 @@ body {
     font-size: 12px;
     line-height: 1.428571429;
     border-radius: 15px;
+}
+
+/**************************************/
+
+.ng-valid[required] {
+  border-left: 5px solid #42A948; /* green */
+}
+
+.ng-invalid {
+  border-left: 5px solid #a94442; /* red */
 }
