--- a/client/app/auth/setupPayment.component.html
+++ b/client/app/auth/setupPayment.component.html
@@ -1,81 +1,164 @@
 <div class="container">
     <h3>{{pageTitle}}</h3>
-        
+
     <div class="stepwizard col-md-offset-3">
         <div class="stepwizard-row setup-panel">
             <div class="stepwizard-step">
-                <a type="button" class="btn btn-circle" 
-                    [class.btn-primary]="currentPage == 1" 
-                    [class.btn-default]="currentPage != 1"
-                    (click)="currentPage = 1">1</a>
+                <a type="button" class="btn btn-circle" [class.btn-primary]="currentPage == 1" [class.btn-default]="currentPage != 1" (click)="currentPage = 1">1</a>
                 <p>Step 1</p>
             </div>
             <div class="stepwizard-step">
-                <a type="button" class="btn btn-circle " 
-                    [class.btn-primary]="currentPage == 2"
-                    [class.btn-default]="currentPage != 2" 
-                    (click)="currentPage = 2">2</a>
+                <a type="button" class="btn btn-circle " [class.btn-primary]="currentPage == 2" [class.btn-default]="currentPage != 2" (click)="currentPage = 2">2</a>
                 <p>Step 2</p>
             </div>
             <div class="stepwizard-step">
-                <a type="button" class="btn btn-circle" 
-                    [class.btn-primary]="currentPage == 3"
-                    [class.btn-default]="currentPage != 3" 
-                    (click)="currentPage = 3">3</a>
+                <a type="button" class="btn btn-circle" [class.btn-primary]="currentPage == 3" [class.btn-default]="currentPage != 3" (click)="currentPage = 3">3</a>
                 <p>Step 3</p>
             </div>
         </div>
     </div>
+
     
-    <form role="form" action="" method="post">
-        <div class="row setup-content" id="step-1" *ngIf="currentPage == 1">
-            <div class="col-xs-6 col-md-offset-3">
-                <div class="col-md-12">
-                    <h3> Step 1</h3>
+
+    <div class="row setup-content" id="step-1" *ngIf="currentPage == 1">
+        <div class="col-xs-6 col-md-offset-3">
+            <form class="form-horizontal" role="form">
+                <fieldset>
+                    <legend>Amount to pay: {{card.amount / 100 | currency:'AUD':true:'1.2-2'}}</legend>
                     <div class="form-group">
-                        <label class="control-label">First Name</label>
-                        <input maxlength="100" type="text" required="required" class="form-control" placeholder="Enter First Name" />
+                        <label class="col-sm-3 control-label" for="card-holder-name">Name on Card</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" name="card-holder-name" id="card-holder-name" placeholder="Card Holder's Name" [(ngModel)]="card.name"
+                                required>
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label">Last Name</label>
-                        <input maxlength="100" type="text" required="required" class="form-control" placeholder="Enter Last Name" />
+                        <label class="col-sm-3 control-label" for="card-number">Card Number</label>
+                        <div class="col-sm-9">
+                            <input type="text" class="form-control" name="card-number" id="card-number" placeholder="Debit/Credit Card Number" [(ngModel)]="card.number"
+                                required>
+                        </div>
                     </div>
                     <div class="form-group">
-                        <label class="control-label">Address</label>
-                        <textarea required="required" class="form-control" placeholder="Enter your address"></textarea>
+                        <label class="col-sm-3 control-label" for="expiry-month">Expiration Date</label>
+                        <div class="col-sm-9">
+                            <div class="row">
+                                <div class="col-xs-3">
+                                    <select class="form-control col-sm-2" name="expiry-month" id="expiry-month" [(ngModel)]="card.expiry_month" required>
+                                        <option value="" disabled selected>month</option>
+                                        <option *ngFor="let m of months" value="m">{{m}}</option>
+                                    </select>
+                                </div>
+                                <div class="col-xs-3">
+                                    <select class="form-control" name="expiry-year" placeholder="Year" [(ngModel)]="card.expiry_year" required>
+                                        <option value="" disabled selected>year</option>
+                                        <option *ngFor="let y of years" value="y">{{y}}</option>
+                                    </select>
+                                </div>
+                            </div>
+                        </div>
                     </div>
-                    <button class="btn btn-primary nextBtn btn-lg pull-right" type="button" (click)="next();">Next</button>
-                </div>
+                    <div class="form-group">
+                        <label class="col-sm-3 control-label" for="cvv">Card CVV</label>
+                        <div class="col-sm-3">
+                            <input type="text" class="form-control" name="cvv" id="cvv" placeholder="Security Code" [(ngModel)]="card.cvv" required>
+                        </div>
+                    </div>
+                    <div class="form-group">
+                        <div class="col-sm-offset-3 col-sm-5">
+                        </div>
+                        <div class="col-sm-4">
+                            <button type="button" class="btn btn-primary pull-right" (click)="next()">
+                                Next <i class="glyphicon glyphicon-arrow-right"></i>
+                            </button>
+                        </div>
+                    </div>
+                </fieldset>
+            </form>
+        </div>
+    </div>
+
+
+    <div class="row setup-content" id="step-2" *ngIf="currentPage == 2">
+        <div class="col-xs-6 col-md-offset-3">
+            <div class="col-md-12">
+                <form class="form-horizontal" role="form">
+                    <fieldset>
+                        <legend>fill your billing address</legend>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label" for="address_line1">Address line 1</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" name="address_line1" id="address_line1" placeholder="Address line 1" [(ngModel)]="card.address_line1"
+                                    required>
+                            </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label" for="address_line2">Address line 2</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" name="address_line2" id="address_line2" placeholder="Address line 2" [(ngModel)]="card.address_line2">
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label" for="address_city">Suburb</label>
+                            <div class="col-sm-9">
+                                <input type="text" class="form-control" name="address_city" id="address_city" placeholder="Suburb" [(ngModel)]="card.address_city"
+                                    required>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label" for="address_state">State</label>
+                            <div class="col-sm-9">
+                                <div class="row">
+                                    <div class="col-xs-3">
+                                        <select class="form-control col-sm-3" name="address_state" id="address_state" [(ngModel)]="card.address_state" required>                                        
+                                        <option *ngFor="let st of states" value="st">{{st}}</option>
+                                    </select>
+                                    </div>
+
+                                    <div class="col-xs-9">
+
+                                        <label class="col-sm-4 col-sm-offset-4 control-label" for="address_postcode">Postcode</label>
+                                        <div class="col-sm-4">
+                                            <input type="text" class="form-control pull-right" name="address_postcode" id="address_postcode" placeholder="Postcode" [(ngModel)]="card.address_postcode"
+                                                required>
+                                        </div>
+                                    </div>
+
+                                </div>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-sm-offset-3 col-sm-5">
+                                <button class="btn btn-primary" type="button" (click)="prev()">
+                                    <i class="glyphicon glyphicon-arrow-left"></i>Prev
+                                </button>
+                            </div>
+                            <div class="col-sm-4">
+                                <button type="button" class="btn btn-primary pull-right" (click)="next()">
+                                    Next <i class="glyphicon glyphicon-arrow-right"></i>
+                                </button>
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
+
             </div>
         </div>
-        <div class="row setup-content" id="step-2" *ngIf="currentPage == 2">
-            <div class="col-xs-6 col-md-offset-3">
-                <div class="col-md-12">
-                    <h3> Step 2</h3>
-                    <div class="form-group">
-                        <label class="control-label">Company Name</label>
-                        <input maxlength="200" type="text" required="required" class="form-control" placeholder="Enter Company Name" />
-                    </div>
-                    <div class="form-group">
-                        <label class="control-label">Company Address</label>
-                        <input maxlength="200" type="text" required="required" class="form-control" placeholder="Enter Company Address" />
-                    </div>
-                    
-                        <button class="btn btn-primary nextBtn btn-lg" type="button" (click)="prev()">Prev</button>
-                        <button class="btn btn-primary nextBtn btn-lg pull-right" type="button" (click)="next()">Next</button>
-                    
-                </div>
+    </div>
+
+
+    <div class="row setup-content" id="step-3" *ngIf="currentPage == 3">
+        <div class="col-xs-6 col-md-offset-3">
+            <div class="col-md-12">
+                <h3> Step 3</h3> Confirmation your payment detail:
+
+                <button class="btn btn-primary nextBtn btn-lg" type="button" (click)="prev()">Prev</button>
+                <button class="btn btn-success btn-lg pull-right" type="submit">Pay Now</button>
             </div>
         </div>
-        <div class="row setup-content" id="step-3" *ngIf="currentPage == 3">
-            <div class="col-xs-6 col-md-offset-3">
-                <div class="col-md-12">
-                    <h3> Step 3</h3>                    
-                        <button class="btn btn-primary nextBtn btn-lg" type="button" (click)="prev()">Prev</button>
-                        <button class="btn btn-success btn-lg pull-right" type="submit">Submit</button>                    
-                </div>
-            </div>
-        </div>
-    </form>
+    </div>
 
 </div>
