--- a/client/app/auth/setupPayment.component.html
+++ b/client/app/auth/setupPayment.component.html
@@ -18,7 +18,7 @@
         </div>
     </div>
 
-    
+
 
     <div class="row setup-content" id="step-1" *ngIf="currentPage == 1">
         <div class="col-xs-6 col-md-offset-3">
@@ -46,13 +46,13 @@
                                 <div class="col-xs-3">
                                     <select class="form-control col-sm-2" name="expiry-month" id="expiry-month" [(ngModel)]="card.expiry_month" required>
                                         <option value="" disabled selected>month</option>
-                                        <option *ngFor="let m of months" value="m">{{m}}</option>
+                                        <option *ngFor="let m of months" value="{{m}}">{{m}}</option>
                                     </select>
                                 </div>
                                 <div class="col-xs-3">
                                     <select class="form-control" name="expiry-year" placeholder="Year" [(ngModel)]="card.expiry_year" required>
                                         <option value="" disabled selected>year</option>
-                                        <option *ngFor="let y of years" value="y">{{y}}</option>
+                                        <option *ngFor="let y of years" value="{{y}}">{{y}}</option>
                                     </select>
                                 </div>
                             </div>
@@ -60,7 +60,7 @@
                     </div>
                     <div class="form-group">
                         <label class="col-sm-3 control-label" for="cvv">Card CVV</label>
-                        <div class="col-sm-3">
+                        <div class="col-sm-2">
                             <input type="text" class="form-control" name="cvv" id="cvv" placeholder="Security Code" [(ngModel)]="card.cvv" required>
                         </div>
                     </div>
@@ -84,7 +84,7 @@
             <div class="col-md-12">
                 <form class="form-horizontal" role="form">
                     <fieldset>
-                        <legend>fill your billing address</legend>
+                        <legend>Fill your billing address</legend>
                         <div class="form-group">
                             <label class="col-sm-3 control-label" for="address_line1">Address line 1</label>
                             <div class="col-sm-9">
@@ -111,16 +111,16 @@
                             <label class="col-sm-3 control-label" for="address_state">State</label>
                             <div class="col-sm-9">
                                 <div class="row">
-                                    <div class="col-xs-3">
-                                        <select class="form-control col-sm-3" name="address_state" id="address_state" [(ngModel)]="card.address_state" required>                                        
-                                        <option *ngFor="let st of states" value="st">{{st}}</option>
+                                    <div class="col-xs-4">
+                                        <select class="form-control col-sm-4" name="address_state" id="address_state" [(ngModel)]="card.address_state" required>                                        
+                                        <option *ngFor="let st of states" value="{{st}}">{{st}}</option>
                                     </select>
                                     </div>
 
-                                    <div class="col-xs-9">
+                                    <div class="col-xs-8">
 
-                                        <label class="col-sm-4 col-sm-offset-4 control-label" for="address_postcode">Postcode</label>
-                                        <div class="col-sm-4">
+                                        <label class="col-sm-4 col-sm-offset-2 control-label" for="address_postcode">Postcode</label>
+                                        <div class="col-sm-6">
                                             <input type="text" class="form-control pull-right" name="address_postcode" id="address_postcode" placeholder="Postcode" [(ngModel)]="card.address_postcode"
                                                 required>
                                         </div>
@@ -133,7 +133,7 @@
                         <div class="form-group">
                             <div class="col-sm-offset-3 col-sm-5">
                                 <button class="btn btn-primary" type="button" (click)="prev()">
-                                    <i class="glyphicon glyphicon-arrow-left"></i>Prev
+                                    <i class="glyphicon glyphicon-arrow-left"></i> Prev
                                 </button>
                             </div>
                             <div class="col-sm-4">
@@ -153,10 +153,69 @@
     <div class="row setup-content" id="step-3" *ngIf="currentPage == 3">
         <div class="col-xs-6 col-md-offset-3">
             <div class="col-md-12">
-                <h3> Step 3</h3> Confirmation your payment detail:
+                <form class="form-horizontal" role="form">
+                    <fieldset>
+                        <legend>Confirmation your payment detail</legend>
 
-                <button class="btn btn-primary nextBtn btn-lg" type="button" (click)="prev()">Prev</button>
-                <button class="btn btn-success btn-lg pull-right" type="submit">Pay Now</button>
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label" for="address_line1">Amount</label>
+                            <label class="col-sm-7 control-label" for="address_line1">{{card.amount/100 | currency:'AUD':true:'1.2-2'}}</label>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label" for="address_line1">Name</label>
+                            <label class="col-sm-7 control-label" for="address_line1">{{card.name}}</label>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label" for="address_line1">Card Number</label>
+                            <label class="col-sm-7 control-label" for="address_line1">{{card.number}}</label>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label" for="address_line1">Expiry</label>
+                            <label class="col-sm-7 control-label" for="address_line1">{{card.expiry_month}} / {{card.expiry_year}}</label>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label" for="address_line1">Address line 1</label>
+                            <label class="col-sm-7 control-label" for="address_line1">{{card.address_line1}}</label>
+                        </div>
+
+                        <div class="form-group" *ngIf="card.address_line2 != ''">
+                            <label class="col-sm-3 control-label" for="address_line1">Address line 2</label>
+                            <label class="col-sm-7 control-label" for="address_line1">{{card.address_line2}}</label>
+                        </div>
+
+                        <div class="form-group">
+                            <label class="col-sm-3 control-label" for="address_line1"></label>
+                            <div class="col-sm-7">
+                                <label class="col-sm-6 control-label" for="address_line1">
+                                {{card.address_city}}
+                            </label>
+                                <label class="col-sm-3 control-label" for="address_line1">
+                                {{card.address_state}} 
+                            </label>
+                                <label class="col-sm-3 control-label" for="address_line1">
+                                {{card.address_postcode}}
+                            </label>
+                            </div>
+                        </div>
+
+                        <div class="form-group">
+                            <div class="col-sm-offset-3 col-sm-5">
+                                <button class="btn btn-primary" type="button" (click)="prev()">
+                                    <i class="glyphicon glyphicon-arrow-left"></i> Prev
+                                </button>
+                            </div>
+                            <div class="col-sm-4">
+                                <button type="button" class="btn btn-success pull-right" (click)="paynow()">
+                                    <i class="glyphicon glyphicon-credit-card"></i> Pay Now 
+                                </button>
+                            </div>
+                        </div>
+                    </fieldset>
+                </form>
             </div>
         </div>
     </div>
